Se completo udidad 6. Comunicándonos con el Back-End - HTTP - Entity Framework Core

--- a/BlazorPeliculas/Server/BlazorPeliculas.Server.csproj
+++ b/BlazorPeliculas/Server/BlazorPeliculas.Server.csproj
@@ -7,12 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.19">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Client\BlazorPeliculas.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorPeliculas.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\personas\4da0f216-a1fb-4bc0-8605-934632bbc52c.jpg" />
   </ItemGroup>
 
 
